--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <string name="selfiecamera">SelfieCamera</string>
     <string name="you_re_looking_at_fish">You\'re looking at Fish</string>
     <string name="you_re_looking_at_yourself">You\'re Looking at Yourself</string>
+    <string name="exception_tango_error">"Tango exception! Try again!"</string>
+    <string name="exception_tango_invalid">"Tango invalid exception! Try again!"</string>
+    <string name="exception_tango_out_of_date">"Tango service outdated!"</string>
+
 </resources>
