--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="colour">ColourCamera</string>
     <string name="fish">FisheyeCamera</string>
     <string name="selfie">SelfieCamera</string>
-    <string name="you_re_in_the_colour_camera">You\'re of Colour</string>
+    <string name="you_re_in_the_colour_camera">You\'re at Colour Camera</string>
     <string name="go_back">Go Back</string>
     <string name="colourcamera">ColourCamera</string>
     <string name="fisheyecamera">FishEyeCamera</string>
